[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.6.1"
edition = "2021"

homepage = "https://github.com/rust-netlink/netlink-packet-audit"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-audit"
description = "netlink packet types"

[dependencies]
bytes = "1.0"
log = "0.4.8"
netlink-packet-core.workspace = true
netlink-packet-utils.workspace = true
netlink-proto.workspace = true

[dev-dependencies]
lazy_static = "1.4.0"
